<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="12dp"
    android:paddingEnd="20dp"
    android:paddingBottom="4dp">

    <EditText
        android:id="@+id/edit_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/web_dav_url"
        android:inputType="textUri"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/web_dav_account"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/web_dav_pw"
        android:inputType="textPassword"
        android:singleLine="true" />

</LinearLayout>
